--- a/front/package.json
+++ b/front/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4",
-    "react-qr-code": "^2.0.15"
+    "react-qr-code": "^2.0.18",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
